default behavior of reactive execution model